2001-09-28  Richard Henderson  <rth@redhat.com>

	* objdump.c (dump_section_header): Dump SEC_ARCH_BIT_0.

2001-09-26  Alan Modra  <amodra@bigpond.net.au>

	* bucomm.c (fatal): Define using VPARAMS, VA_OPEN, VA_FIXEDARG,
	VA_CLOSE.
	(non_fatal): Likewise.
	* objdump.c (objdump_sprintf): Likewise.
	* readelf.c (error): Likewise.
	(warn): Likewise.

2001-09-25  Jakub Jelinek  <jakub@redhat.com>

	* readelf.c (do_wide): New.
	(options): Add --wide.
	(usage, parse_args): Likewise.
	(process_program_headers): Put each segment on a single line if
	--wide is given.
	(process_section_headers): Put each section on a single line if
	--wide is given.
	* doc/binutils.texi: Document it.
	* NEWS: Likewise.

2001-09-25  Alan Modra  <amodra@bigpond.net.au>

	* readelf.c (print_vma): Print 8 digits of low hex value.

2001-09-24  Andreas Jaeger  <aj@suse.de>

	* nlmconv.c: Fix warnings about unused attributes and function
	prototypes.

	* strings.c: Add prototype for get_char.

2000-09-19  H.J. Lu  <hjl@gnu.org>

	* doc/Makefile.am ($(DEMANGLER_NAME).1): Try cxxfilt.man and
	$(srcdir)/cxxfilt.man.
	* doc/Makefile.in: Rebuild.

2001-09-19  Alan Modra  <amodra@bigpond.net.au>

	* objcopy.c (copy_main): Correct rename-section string parsing.
	Consolidate new_name parsing, and error messages.

2001-09-18  Bruno Haible  <haible@clisp.cons.org>

	* addr2line.c: Don't include <ctype.h>.
	(main): For gettext, also set the LC_CTYPE locate facet.
	* ar.c (main): Likewise.
	* coffdump.c (main): Likewise.
	* dlltool.c: Include "safe-ctype.h" instead of <ctype.h>.
	(main): For gettext, also set the LC_CTYPE locate facet.
	Use ISALNUM instead of isalpha/isdigit.
	* dllwrap.c: Don't include <ctype.h>.
	(main): For gettext, also set the LC_CTYPE locate facet.
	* nlmconv.c: Include "safe-ctype.h" instead of <ctype.h>.
	(main): For gettext, also set the LC_CTYPE locate facet.
	Use TOUPPER instead of islower/toupper.
	* nlmheader.y: Include "safe-ctype.h" instead of <ctype.h>.