@@ -1,3 +1,8 @@
+2001-09-30  Hans-Peter Nilsson  <hp@bitrange.com>
+
+	* Makefile.am: Update dependencies with "make dep-am".
+	* Makefile.in: Regenerate.
+
 2001-09-28  Richard Henderson  <rth@redhat.com>
 
 	* objdump.c (dump_section_header): Dump SEC_ARCH_BIT_0.
